syntax = "proto3";

package user_info;

service Greeter {
  // Sends a greeting
  rpc SayHello (UserInfoRequest) returns (UserInfoResponse) {}
}

message UserInfo {
    message User {
        string username = 1;
        uint32 age      = 2;
        string graduate = 3;
    }
    
    repeated User user_list = 1;
}

message UserInfoRequest{
    UserInfo userinfo=1;
}

message UserInfoResponse{
    string message=1;
}